Enhance global exception handling and JWT authentication: add handling for Spring Security authentication exceptions, implement UserDetails interface in User entity, and improve JWT token processing in filter